--- a/P010710.opf/meta.yml
+++ b/P010710.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P010710
+id: P010710
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W3CN7030
   title: དམངས་ཡོངས་ཀྱི་ནུས་ཁུངས་གྲོན་ཆུང་དང་བཙོག་འབུད་ཉུང་དུ་གཏོང་རྒྱུའི་སྐོར་གྱི་ལག་དེབ།
-  volume: ''
   author: ''
+  volumes: {}
