--- a/P010710.opf/layers/v001/Pagination.yml
+++ b/P010710.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: c4615eaf1b494a2a955ab3e8e404726a
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   1642cbad825a4327bd34b5ce798c03d4:
