--- a/P010710.opf/meta.yml
+++ b/P010710.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P010710
 initial_creation_type: ocr
 created_at: 30/03/2020
-last_modified_at: 25/11/2021
+last_modified_at: 2021-12-20 10:20:59.410358
 source_metadata:
   id: bdr:W3CN7030
   title: དམངས་ཡོངས་ཀྱི་ནུས་ཁུངས་གྲོན་ཆུང་དང་བཙོག་འབུད་ཉུང་དུ་གཏོང་རྒྱུའི་སྐོར་གྱི་ལག་དེབ།
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 80
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: false
